--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
         <version>3.4.3</version>
     </dependency>
     <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>1.2</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
